Search patient in Epic

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@craco/craco": "^6.0.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "9",
+    "axios": "^0.21.1",
+    "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-json-validator-middleware": "^2.1.1",
     "http-status": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
     "postcss": "7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
