--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "autoprefixer": "9",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
@@ -13,16 +13,16 @@
     "express-json-validator-middleware": "^2.1.1",
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
-    "postcss": "7",
+    "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "scripts": {
-    "dev": "concurrently --kill-others-on-fail \"yarn:server\" \"yarn:client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
     "client": "craco start",
     "server": "nodemon src/server/server.js",
     "start": "node src/server/server.js",
