--- a/package.json
+++ b/package.json
@@ -3,23 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.0.0",
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-json-validator-middleware": "^2.1.1",
     "http-status": "^1.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "postcss": "^7.0.35",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-loader-spinner": "^3.1.14",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
     "dev": "concurrently --kill-others-on-fail \"npm:server\" \"npm:client\"",
@@ -49,8 +38,18 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.0.0",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "autoprefixer": "^9.8.6",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "postcss": "^7.0.35",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "proxy": "http://localhost:8090"
 }
