--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status": "^1.5.0",
+    "jsdom": "^16.4.0",
     "jsonwebtoken": "^8.5.1"
   },
   "scripts": {
